# pusher-2d

./: .gitignore  CMakeLists.txt  float128.sh  issues.txt  performance-note.md
benchmark/: CMakeLists.txt  check-rk4.cc  const-bzer-largeorbit.cc  const-bzez-largeorbit.cc  const-ez.cc  cusp.cc  ezbr.cc  linear-ez.cc  linear-oscillator.cc  linear-relativistic.cc  mirrored-ez.cc  mixed-reflection.cc  nonadiabatic-cusp.cc  perf-zero.cc  planar-largeorbit-aphi.cc  planar-largeorbit-boris.cc  planar-largeorbit.cc  planar-perf.cc  planar-smallorbit-aphi.cc  planar-smallorbit-boris.cc  planar-smallorbit-perioderror.cc  planar-smallorbit.cc
cmake/: compiler.cmake  coverage.cmake  test.cmake
notes/: grad_phi.nb
pusher/: CMakeLists.txt  efield.cc  efield.h  magfield.cc  magfield.h  pusher.cc  pusher.h  pv.cc  pv.h
src/: magfield.cc  magfield.h
tests/: CMakeLists.txt  test-aphi.cc  test-boris.cc  test-magfield.cc
